--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="header">
             <h1>Solara</h1>
-            <div class="warning">Made by Wet Dream Boy，免费API来自GD音乐台(music.gdstudio.xyz)，仅供学习交流使用，请支持正版音乐奥！</div>
+            <div class="warning">Made by Wet Dream Boy，免费API来自GD音乐台，仅供学习交流使用，请支持正版音乐奥！</div>
             <div class="theme-switch-wrapper">
                 <button id="themeToggleButton" class="theme-toggle-button" type="button" aria-label="切换深浅色模式">
                     <i class="fas fa-sun theme-icon theme-icon--sun" aria-hidden="true"></i>
@@ -131,9 +131,19 @@
             <button type="button" class="mobile-close-btn" id="mobileSearchClose" aria-label="关闭搜索">
                 <i class="fas fa-times" aria-hidden="true"></i>
             </button>
-            <div class="search-container">
-                <input type="text" id="searchInput" class="search-input" placeholder="搜索歌曲、歌手或专辑...">
-                <div class="source-select-wrapper" id="sourceSelectWrapper">
+<div class="search-container">
+    <!-- 新增：搜索类型选择器 -->
+    <div class="search-type-wrapper">
+        <select id="searchTypeSelect" class="search-type-select">
+            <option value="">默认</option>
+            <option value="1">单曲</option>
+            <option value="1000">歌单</option>
+            <option value="10">专辑</option>
+        </select>
+    </div>
+    
+    <input type="text" id="searchInput" class="search-input" placeholder="搜索歌曲、歌手或专辑...">
+    <div class="source-select-wrapper" id="sourceSelectWrapper">
                     <button id="sourceSelectButton" class="source-select-btn" type="button" aria-haspopup="listbox" aria-expanded="false">
                         <span id="sourceSelectLabel">网易云音乐</span>
                         <i class="fas fa-chevron-down caret-icon" aria-hidden="true"></i>
