--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Solara</title>
-    <meta name="apple-mobile-web-app-title" content="Solara">
+    <title>Ocean Music海洋音乐</title>
+    <meta name="apple-mobile-web-app-title" content="Ocean Music海洋音乐">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="shortcut icon" href="/favicon.png">
@@ -22,7 +22,7 @@
             const isMobileUA = /android|iphone|ipad|ipod|mobile|blackberry|phone|opera mini|windows phone/i.test(ua);
             const isSmallScreen = typeof window.matchMedia === "function" && window.matchMedia("(max-width: 820px)").matches;
             const isMobile = isMobileUA || isSmallScreen;
-            window.__SOLARA_IS_MOBILE = isMobile;
+            window.__Ocean Music海洋音乐_IS_MOBILE = isMobile;
             if (!isMobile) {
                 document.documentElement.classList.add("desktop-view");
                 const desktopLink = document.createElement("link");
@@ -106,10 +106,13 @@
     </div>
     <div class="container" id="mainContainer">
         <div class="mobile-toolbar" id="mobileToolbar" role="toolbar">
-            <button class="mobile-toolbar__button" id="mobileExploreButton" type="button" aria-label="探索雷达">
-                <i class="fas fa-satellite-dish" aria-hidden="true"></i>
-            </button>
-            <div class="mobile-toolbar__title" id="mobileToolbarTitle">Solara</div>
+    <button class="mobile-toolbar__button" id="mobileSettingsToggle" type="button" aria-label="设置" style="order: -1;">
+        <i class="fas fa-cog" aria-hidden="true"></i>
+    </button>
+    <button class="mobile-toolbar__button" id="mobileExploreButton" type="button" aria-label="探索雷达">
+        <i class="fas fa-satellite-dish" aria-hidden="true"></i>
+    </button>
+            <div class="mobile-toolbar__title" id="mobileToolbarTitle">Ocean Music海洋音乐</div>
             <div class="mobile-toolbar__actions">
                 <button class="mobile-toolbar__button" id="mobileSearchToggle" type="button" aria-label="打开搜索">
                     <i class="fas fa-search" aria-hidden="true"></i>
@@ -117,8 +120,8 @@
             </div>
         </div>
         <div class="header">
-            <h1>Solara</h1>
-            <div class="warning">Made by Wet Dream Boy，仅供学习交流使用，请支持正版音乐奥！</div>
+            <h1>Ocean Music海洋音乐</h1>
+            <div class="warning">Made by Echo Valley，仅供学习交流使用，请支持正版音乐！</div>
             <div class="theme-switch-wrapper">
                 <button id="themeToggleButton" class="theme-toggle-button" type="button" aria-label="切换深浅色模式">
                     <i class="fas fa-sun theme-icon theme-icon--sun" aria-hidden="true"></i>
@@ -512,7 +515,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/index.js"></script>
 <script>
-    if (window.__SOLARA_IS_MOBILE) {
+    if (window.__OceanMusic_IS_MOBILE) {
         const mobileScript = document.createElement('script');
         mobileScript.src = 'js/mobile.js';
         mobileScript.async = false;
