--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Ocean Music海洋音乐</title>
-    <meta name="apple-mobile-web-app-title" content="Ocean Music海洋音乐">
+    <title>OceanMusic</title>
+    <meta name="apple-mobile-web-app-title" content="OceanMusic">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="shortcut icon" href="/favicon.png">
@@ -22,7 +22,7 @@
             const isMobileUA = /android|iphone|ipad|ipod|mobile|blackberry|phone|opera mini|windows phone/i.test(ua);
             const isSmallScreen = typeof window.matchMedia === "function" && window.matchMedia("(max-width: 820px)").matches;
             const isMobile = isMobileUA || isSmallScreen;
-            window.__Ocean Music海洋音乐_IS_MOBILE = isMobile;
+            window.__OceanMusic_IS_MOBILE = isMobile;
             if (!isMobile) {
                 document.documentElement.classList.add("desktop-view");
                 const desktopLink = document.createElement("link");
@@ -112,7 +112,7 @@
     <button class="mobile-toolbar__button" id="mobileExploreButton" type="button" aria-label="探索雷达">
         <i class="fas fa-satellite-dish" aria-hidden="true"></i>
     </button>
-            <div class="mobile-toolbar__title" id="mobileToolbarTitle">Ocean Music海洋音乐</div>
+            <div class="mobile-toolbar__title" id="mobileToolbarTitle">OceanMusic</div>
             <div class="mobile-toolbar__actions">
                 <button class="mobile-toolbar__button" id="mobileSearchToggle" type="button" aria-label="打开搜索">
                     <i class="fas fa-search" aria-hidden="true"></i>
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="header">
-            <h1>Ocean Music海洋音乐</h1>
+            <h1>OceanMusic</h1>
             <div class="warning">Made by Echo Valley，仅供学习交流使用，请支持正版音乐！</div>
             <div class="theme-switch-wrapper">
                 <button id="themeToggleButton" class="theme-toggle-button" type="button" aria-label="切换深浅色模式">
